<resources>
    <string name="app_name">ReligionAndMe01</string>

    <string name="categories">Обучение</string>
    <string name="settings">Настройки</string>
    <string name="questions">Вопросы</string>
    <string name="quiz">Тесты</string>
    <string name="faq">FAQ</string>
    <string name="chooseLanguage">Выбрать язык</string>
    <string name="contacts">Контакты</string>
    <string name="leaveReview">Оставить отзыв</string>
    <string name="russ">Русский язык</string>
    <string name="ky">Кыргыз тили</string>
    <string name="cancel">Отменить</string>

    <string name="changeLanguageMessage">Вы успешно поменяли язык приложения</string>
    <string name="askQuestion">Задать свой вопрос</string>
    <string name="choose_lang_txt">Выберите язык</string>
    <string name="age">Возраст</string>
    <string name="_15_19">15–19</string>
    <string name="_20_25">20–25</string>
    <string name="_26_31">26–31</string>
    <string name="_31">31 и выше</string>
    <string name="next">Далее</string>
    <string name="welcomeErrorMessage">Пожалуйста укажите предпочитаемый язык и ваш возраст</string>
    <string name="header_text">Header Text</string>
    <string name="sample">Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting of alphabetic and numeric characters, between two or more users of mobile devices, desktops/laptops, or other type of compatible computer. Text messages may be sent over a cellular network, or may also be sent via an Internet connection.</string>
    <string name="instructions">Инструкция</string>
    <string name="yourName">* Ваше имя</string>
    <string name="yourQuestion">Ваш вопрос</string>
    <string name="send">Отправить</string>
    <string name="instruction">Иструкция</string>
    <string name="yourReview">* Ваш отзыв</string>

</resources>