<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".welcome.WelcomeTextActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/header_text"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerText"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/actor"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/sample"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/background_button"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />


</RelativeLayout>