<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ask.AskQuestionActivity">

    <RelativeLayout
        android:id="@+id/appBarAsk"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionBarStatus"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <!--        <androidx.appcompat.widget.Toolbar-->
        <!--            android:id="@+id/toolbar_ask"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="?attr/actionBarSize"-->
        <!--            android:background="@color/actionBarStatus"-->
        <!--            android:elevation="0dp"-->
        <!--            android:theme="@style/ThemeOverlay.MaterialComponents.Light"-->
        <!--            tools:ignore="UnusedAttribute" />-->

        <ImageView
            android:id="@+id/imgToolbar"
            android:layout_width="38dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_toEndOf="@+id/imgToolbar"
            android:layout_toRightOf="@+id/imgToolbar"
            android:gravity="center_vertical"
            android:text="@string/askQuestion"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarAsk">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/instructions"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textViewTextInst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewInstructions"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/actor"
                android:lineSpacingExtra="6dp"
                android:text="@string/sample"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/askNameEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/textViewTextInst"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/back_border"
                android:hint="@string/yourName"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/textColorDark" />

            <EditText
                android:id="@+id/questionUserEditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/askNameEditText"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/back_border"
                android:gravity="start"
                android:hint="@string/yourQuestion"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/questionUserEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_button"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/send"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>