<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".welcome.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/chooseLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/choose_lang_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:id="@+id/linear01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chooseLanguage"
                android:layout_marginStart="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="42dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/langKyCardView"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="0.5"
                    android:padding="0dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/buttonLangKy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:background="@drawable/back_border"
                        android:gravity="center"
                        android:text="@string/ky"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/langRussCardView"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="0.5"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="15dp">

                    <Button
                        android:id="@+id/buttonLangRu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:background="@drawable/back_border"
                        android:gravity="center"
                        android:text="@string/russ"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear01"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/age"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ageRange01"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/textViewAge"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/buttonAgeRange01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/back_border"
                    android:gravity="center"
                    android:text="@string/_15_19"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ageRange02"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/ageRange01"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/buttonAgeRange02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/back_border"
                    android:gravity="center"
                    android:text="@string/_20_25"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/ageRange03"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/ageRange02"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/buttonAgeRange03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/back_border"
                    android:gravity="center"
                    android:text="@string/_26_31"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ageRange04"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/ageRange03"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/buttonAgeRange04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/back_border"
                    android:gravity="center"
                    android:text="@string/_31"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/ageRange04"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/background_button"
                android:paddingStart="64dp"
                android:paddingEnd="64dp"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>