<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.ChangeLanguageActivity">

    <RelativeLayout
        android:id="@+id/appBarLang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionBarStatus"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <ImageView
            android:id="@+id/imgToolbarLang"
            android:layout_width="38dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/titleLang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_toEndOf="@+id/imgToolbarLang"
            android:layout_toRightOf="@+id/imgToolbarLang"
            android:gravity="center_vertical"
            android:text="@string/chooseLanguage"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/russianLang"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/appBarLang"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_list"
        android:drawableEnd="@drawable/flag_russian_federation"
        android:drawableRight="@drawable/flag_russian_federation"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:text="@string/russ"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/kyrgyzLang"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/russianLang"
        android:layout_marginTop="3dp"
        android:background="@drawable/background_list"
        android:drawableEnd="@drawable/flag_kyrgyzstan"
        android:drawableRight="@drawable/flag_kyrgyzstan"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:text="@string/ky"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


</RelativeLayout>